--- a/templates/queries.html
+++ b/templates/queries.html
@@ -56,7 +56,7 @@
             </li>
 		</ul>
 
-		<a href="?back" class="back_btn out_btn" name="back">Выход</a>
+		<a href="?back" class="back_btn out_btn" name="back">Назад</a>
 	</div>
 </body>
 </html>
