--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Главное меню</title>
     <link rel="stylesheet" type="text/css" href="{{ dated_url_for('static', filename='css/main.css') }}">
-    <link rel="icon" href="static/img/hospital-favicon128x128.ico">
+    <link rel="icon" href="{{ url_for('static', filename='img/hospital-favicon128x128.ico') }}">
 </head>
 <body>
     <div class="img"></div>
@@ -15,7 +15,7 @@
 		<h3>Главное меню</h3>
 		<ul class="main_nav main_menu">
             <li>
-                <a href=".?point=1">
+                <a href="?point=1">
                     <span class="defis"></span>
                     <div></div>
                     <span>Назначить лечащего врача</span>
@@ -58,7 +58,7 @@
             </li>
 		</ul>
         <br>
-		<a href="?out" class="out_btn" name="out">Выход</a>
+		<a href="?out" class="out_btn">Выход</a>
 	</div>
 </body>
 </html>
