--- a/templates/out.html
+++ b/templates/out.html
@@ -3,22 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Вывод</title>
+    <title>Выход</title>
     <link rel="stylesheet" type="text/css" href="{{ dated_url_for('static', filename='css/main.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='img/hospital-favicon128x128.ico') }}">
 </head>
 <body>
     <div class="img"></div>
     <div class="container">
-        {% if (output) %}
-            <p>{{ output }}</p>
-        {% else %}
-            <p>Ошибка вывода.</p>
-        {% endif %}
-        {% if (nav_buttons) %}
-            <a href="?{{ back }}" class="out_btn">Назад</a>
-            <a href="?out" class="out_btn">Выход</a>
-        {% endif %}
+        <p>Вы вышли из системы</p>
+        <a href="{{ url_for('auth.do_auth') }}" class="out_btn">Вход</a>
     </div>
 </body>
 </html>
