--- a/templates/main_menu/queries/query4/query4_result.html
+++ b/templates/main_menu/queries/query4/query4_result.html
@@ -46,7 +46,7 @@
             </div>
         {% endif %}
 
-        <a href="?query4_result_back" class="out_btn">Назад</a>
+        <a href="?{{ back }}" class="out_btn">Назад</a>
         <a href="?out" class="out_btn">Выход</a>
     </div>
 </body>
