--- a/templates/main_menu/report/report_result.html
+++ b/templates/main_menu/report/report_result.html
@@ -45,7 +45,7 @@
             </div>
         {% endif %}
 
-        <a href="?report_result_back" class="out_btn">Назад</a>
+        <a href="?{{ back }}" class="out_btn">Назад</a>
         <a href="?out" class="out_btn">Выход</a>
     </div>
 </body>
