--- a/templates/main_menu/queries/query2/query2_result.html
+++ b/templates/main_menu/queries/query2/query2_result.html
@@ -36,7 +36,7 @@
             </div>
         {% endif %}
 
-        <a href="?query2_result_back" class="out_btn">Назад</a>
+        <a href="?{{ back }}" class="out_btn">Назад</a>
         <a href="?out" class="out_btn">Выход</a>
     </div>
 </body>
