--- a/templates/out.html
+++ b/templates/out.html
@@ -10,7 +10,7 @@
 <body>
     <div class="img"></div>
     <div class="container">
-        <p>Вы вышли из системы</p>
+        <p>Вы вышли из системы.</p>
         <a href="{{ url_for('auth.do_auth') }}" class="out_btn">Вход</a>
     </div>
 </body>
