--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -27,5 +27,7 @@
             <input type="submit" name="auth_send" value="Войти" class="out_btn">
         </form>
     </div>
+    
+    <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
