--- a/templates/main_menu/history_rec/history_rec_patients.html
+++ b/templates/main_menu/history_rec/history_rec_patients.html
@@ -8,8 +8,22 @@
     <link rel="icon" href="{{ url_for('static', filename='img/hospital-favicon128x128.ico') }}">
 </head>
 <body>
+    <div class="modal-container closed">
+        <div class="modal-overlay" id="modal-overlay"></div>
+        <div class="modal" id="modal">
+            <div class="modal-guts">
+            <h2>Подтверждение выхода</h2>
+            <p>Вы уверены, что хотите выйти?</p>
+            <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
+            <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
+            
+            </div>
+        </div>
+    </div>
+    
+
     <div class="img"></div>
-    <div class="container">
+	<div class="container">
         <h2>Выбор пациента для записи</h2>
         <hr>
 
@@ -26,7 +40,9 @@
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn">Выход</a>
+        <a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
     </div>
+    
+    <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
