--- a/templates/main_menu/main_menu.html
+++ b/templates/main_menu/main_menu.html
@@ -8,6 +8,20 @@
     <link rel="icon" href="{{ url_for('static', filename='img/hospital-favicon128x128.ico') }}">
 </head>
 <body>
+    <div class="modal-container closed">
+        <div class="modal-overlay" id="modal-overlay"></div>
+        <div class="modal" id="modal">
+            <div class="modal-guts">
+            <h2>Подтверждение выхода</h2>
+            <p>Вы уверены, что хотите выйти?</p>
+            <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
+            <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
+            
+            </div>
+        </div>
+    </div>
+    
+    
     <div class="img"></div>
 	<div class="container">
 		<h2>Добро пожаловать в главное меню информационной системы "Госпиталь".</h2>
@@ -66,7 +80,9 @@
             </li>
 		</ul>
         <br>
-		<a href="?out" class="out_btn">Выход</a>
-	</div>
+		<a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
+    </div>
+    
+    <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
