--- a/templates/out.html
+++ b/templates/out.html
@@ -8,10 +8,26 @@
     <link rel="icon" href="{{ url_for('static', filename='img/hospital-favicon128x128.ico') }}">
 </head>
 <body>
+    <div class="modal-container closed">
+        <div class="modal-overlay" id="modal-overlay"></div>
+        <div class="modal" id="modal">
+            <div class="modal-guts">
+            <h2>Подтверждение выхода</h2>
+            <p>Вы уверены, что хотите выйти?</p>
+            <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
+            <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
+            
+            </div>
+        </div>
+    </div>
+    
+
     <div class="img"></div>
-    <div class="container">
+	<div class="container">
         <p>Вы вышли из системы.</p>
         <a href="{{ url_for('auth.do_auth') }}" class="out_btn">Вход</a>
     </div>
+    
+    <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
