--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -17,7 +17,7 @@
             <p>{{ request.args['is_more'] }}</p>
         {% endif %}
 
-        <form action="" method="POST">
+        <form id="form-id" action="" method="POST">
             <label for="log_id">Введите логин:</label>
             <input type="text" name="log" id="log_id">
             <br>
