--- a/templates/main_menu/pat_list_change/pat_list_change_edit.html
+++ b/templates/main_menu/pat_list_change/pat_list_change_edit.html
@@ -12,8 +12,8 @@
         <div class="modal-overlay" id="modal-overlay"></div>
         <div class="modal" id="modal">
             <div class="modal-guts">
-            <h2>Подтверждение выхода</h2>
-            <p>Вы уверены, что хотите выйти?</p>
+            <h2 class="modal-guts-head">Подтверждение выхода</h2>
+            <p class="modal-guts-content">Вы уверены, что хотите выйти?</p>
             <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
             <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
             
@@ -26,7 +26,7 @@
 	<div class="container">
         <h2>Редактировать данные пациента.</h2>
 
-        <form action="" method="POST">
+        <form id="form-id" action="" method="POST">
             {% for res in patient %}
                 <label for="patient_edit_num_id">Редактировать номер:</label>
                 <input type="text" name="patient_edit_num" id="patient_edit_num_id" value="{{ res['P_id'] }}">
@@ -55,12 +55,12 @@
                 <label for="patient_edit_doc_id">Редактировать врача:</label>
                 <input type="text" name="patient_edit_doc" id="patient_edit_doc_id" value="{% if (res['PDoc_id'] == None) %}null{% else %}{{ res['PDoc_id'] }}{% endif %}">
                 <br>
-                <input type="submit" name="edit_send" value="Отправить" class="out_btn">
+                <input type="submit" name="edit_send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
             {% endfor %}
         </form>
 
         <a href="?pat_list_change_result_back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
