--- a/static/css/main.css
+++ b/static/css/main.css
@@ -220,13 +220,15 @@ input:focus:valid, textarea:focus:valid {
   transition: opacity .25s ease-in-out;
   margin: 5px;
   font-size: 18px;
-  height: 21px;
+  height: 42px;
   line-height: 21px;
   box-shadow: 0 3px 0 0 #9a000087;
+  box-sizing: border-box;
 }
 
 .container form input.out_btn, button.out_btn {
-  height: 40px;
+  height: 45px;
+  box-sizing: border-box;
 }
 
 .container .out_btn:hover, .out_btn:hover {
@@ -331,7 +333,7 @@ table.table_res td {
   /* Probably need media queries here */
   width: 600px;
   max-width: 100%;
-  height: 300px;
+  height: 350px;
   max-height: 100%;
   
   position: fixed;
@@ -348,6 +350,7 @@ table.table_res td {
   background: white;
   box-shadow: 0 0 60px 10px rgba(0, 0, 0, 0.9);
   opacity: 0;
+  border-radius: 5px;
 }
 
 .modal-overlay {
