--- a/templates/main_menu/appointment/appointment_doctors.html
+++ b/templates/main_menu/appointment/appointment_doctors.html
@@ -12,8 +12,8 @@
         <div class="modal-overlay" id="modal-overlay"></div>
         <div class="modal" id="modal">
             <div class="modal-guts">
-            <h2>Подтверждение выхода</h2>
-            <p>Вы уверены, что хотите выйти?</p>
+            <h2 class="modal-guts-head">Подтверждение выхода</h2>
+            <p class="modal-guts-content">Вы уверены, что хотите выйти?</p>
             <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
             <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
             
@@ -27,7 +27,7 @@
         <h2>Выбор врача для пациента</h2>
         <hr>
 
-        <form action="" method="POST">
+        <form id="form-id" action="" method="POST">
             <label for="doctors_id">Выберите врача:</label>
             <select name="doctors" id="doctors_id" class="my_select my_select_wide">
                 {% for doctor in doctors %}
@@ -35,12 +35,12 @@
                 {% endfor %}
             </select>
 
-            <input type="submit" name="doctors_send" value="Отправить" class="out_btn">
+            <input type="submit" name="doctors_send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
         </form>
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
