--- a/templates/main_menu/pat_list_change/pat_list_change_patients.html
+++ b/templates/main_menu/pat_list_change/pat_list_change_patients.html
@@ -12,8 +12,8 @@
         <div class="modal-overlay" id="modal-overlay"></div>
         <div class="modal" id="modal">
             <div class="modal-guts">
-            <h2>Подтверждение выхода</h2>
-            <p>Вы уверены, что хотите выйти?</p>
+            <h2 class="modal-guts-head">Подтверждение выхода</h2>
+            <p class="modal-guts-content">Вы уверены, что хотите выйти?</p>
             <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
             <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
             
@@ -59,10 +59,10 @@
                             <td>{{ patient['PR_id'] }}</td>
                             <td>{% if (patient['PDoc_id'] == None) %}null{% else %}{{ patient['PDoc_id'] }}{% endif %}</td>
                             <td>
-                                <form action="" method="POST">
+                                <form id="form-id" action="" method="POST">
                                     <input type="hidden" name="patients" value="{{ patient['P_id'] }}">
                                     <input type="submit" name="patients_send" value="Редактировать" class="out_btn">
-                                    <input type="submit" name="patients_send_delete" value="Удалить" class="out_btn">
+                                    <input type="submit" name="patients_send_delete" value="Удалить" class="out_btn open-modal-input" id="form-submit-id">
                                 </form>
                             </td>
                         </tr>
@@ -74,7 +74,7 @@
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
