--- a/templates/main_menu/queries/query1/query1.html
+++ b/templates/main_menu/queries/query1/query1.html
@@ -12,10 +12,10 @@
         <div class="modal-overlay" id="modal-overlay"></div>
         <div class="modal" id="modal">
             <div class="modal-guts">
-            <h2>Подтверждение выхода</h2>
-            <p>Вы уверены, что хотите выйти?</p>
-            <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
-            <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
+                <h2 class="modal-guts-head">Подтверждение выхода</h2>
+                <p class="modal-guts-content">Вы уверены, что хотите выйти?</p>
+                <button class="close-button out_btn modal_btn modal_btn_weak" id="close-button">Вернуться</button>
+                <button class="confirm-button out_btn modal_btn modal_btn_strong" id="confirm-button">Выход</button>
             
             </div>
         </div>
@@ -25,14 +25,12 @@
     <div class="img"></div>
 	<div class="container">
         <h2>Отправка запроса 1</h2>
-
         <p>
             Отчет о количестве пациентов лечащих врачей определенного отделения за определенный год.
         </p>
-
         <hr>
 
-        <form action="" method="POST">
+        <form id="form-id" action="" method="POST">
             <label for="dep_id">Введите название отделения:</label>
             <input type="text" name="dep_num" id="dep_id">
             <br>
@@ -44,7 +42,7 @@
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
