--- a/templates/main_menu/history_rec/history_rec_record.html
+++ b/templates/main_menu/history_rec/history_rec_record.html
@@ -34,12 +34,12 @@
             <label for="record_app_id">Введите назначения:</label>
             <input type="text" name="record_app" id="record_app_id">
             <br>
-            <input type="submit" name="record_send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
+            <input type="submit" name="record_send" value="Отправить" class="out_btn open-modal-all">
         </form>
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
