--- a/templates/main_menu/main_menu.html
+++ b/templates/main_menu/main_menu.html
@@ -80,7 +80,7 @@
             </li>
 		</ul>
         <br>
-		<a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+		<a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
