--- a/templates/main_menu/queries/queries.html
+++ b/templates/main_menu/queries/queries.html
@@ -57,7 +57,7 @@
 		</ul>
 
         <a href="?back" class="back_btn out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
 	</div>
 </body>
 </html>
