--- a/templates/main_menu/queries/query3/query3_result.html
+++ b/templates/main_menu/queries/query3/query3_result.html
@@ -65,7 +65,7 @@
         {% endif %}
 
         <a href="?{{ back }}" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
