--- a/templates/main_menu/appointment/appointment_doctors.html
+++ b/templates/main_menu/appointment/appointment_doctors.html
@@ -35,12 +35,12 @@
                 {% endfor %}
             </select>
 
-            <input type="submit" name="doctors_send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
+            <input type="submit" name="doctors_send" value="Отправить" class="out_btn open-modal-all">
         </form>
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
