--- a/templates/main_menu/pat_list_change/pat_list_change_edit.html
+++ b/templates/main_menu/pat_list_change/pat_list_change_edit.html
@@ -55,12 +55,12 @@
                 <label for="patient_edit_doc_id">Редактировать врача:</label>
                 <input type="text" name="patient_edit_doc" id="patient_edit_doc_id" value="{% if (res['PDoc_id'] == None) %}null{% else %}{{ res['PDoc_id'] }}{% endif %}">
                 <br>
-                <input type="submit" name="edit_send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
+                <input type="submit" name="edit_send" value="Отправить" class="out_btn open-modal-all">
             {% endfor %}
         </form>
 
         <a href="?pat_list_change_result_back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
