--- a/templates/main_menu/pat_list_change/pat_list_change_patients.html
+++ b/templates/main_menu/pat_list_change/pat_list_change_patients.html
@@ -62,7 +62,7 @@
                                 <form id="form-id" action="" method="POST">
                                     <input type="hidden" name="patients" value="{{ patient['P_id'] }}">
                                     <input type="submit" name="patients_send" value="Редактировать" class="out_btn">
-                                    <input type="submit" name="patients_send_delete" value="Удалить" class="out_btn open-modal-input" id="form-submit-id">
+                                    <input type="submit" name="patients_send_delete" value="Удалить" class="out_btn open-modal-input open-modal-all" id="form-submit-id">
                                 </form>
                             </td>
                         </tr>
@@ -74,7 +74,7 @@
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
