--- a/templates/main_menu/report/report.html
+++ b/templates/main_menu/report/report.html
@@ -35,12 +35,12 @@
             <label for="month_id">Введите месяц:</label>
             <input type="text" name="in_month" id="month_id">
             <br>
-            <input type="submit" name="send" value="Отправить" class="out_btn open-modal-input" id="form-submit-id">
+            <input type="submit" name="send" value="Отправить" class="out_btn open-modal-all">
         </form>
 
 
         <a href="?back" class="out_btn">Назад</a>
-        <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+        <a href="?out" class="out_btn open-modal-all">Выход</a>
     </div>
     
     <script type="text/javascript" src="{{ dated_url_for('static', filename='js/main.js') }}"></script>
