--- a/templates/output.html
+++ b/templates/output.html
@@ -31,7 +31,7 @@
         {% endif %}
         {% if (nav_buttons) %}
             <a href="?{{ back }}" class="out_btn">Назад</a>
-            <a href="?out" class="out_btn open-modal-a" id="open-modal-id">Выход</a>
+            <a href="?out" class="out_btn open-modal-all">Выход</a>
         {% endif %}
     </div>
     
